# winterfell

./: README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml  Dockerfile  docker-compose.yaml
server/data/: api-doc.json  sample_menu.yaml
server/distrib/: docker-compose.yaml
server/distrib/pgsql/: Dockerfile
server/distrib/server/: Dockerfile
server/src/: appstate.rs  args.rs  db.rs  handler.rs  lib.rs  request.rs  router.rs
server/src/handler/: doc.rs  menumgmt.rs  ordermgmt.rs
